# hollowcheck-rust

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  generic-contract.yaml  hollowcheck.yaml  rust-contract.yaml  violations.txt
.github/workflows/: ci.yml  release.yml
contracts/: c-cpp.yaml  generic.yaml  go.yaml  javascript.yaml  python.yaml  rust.yaml  strict.yaml
docs/: CLI_REFERENCE.md  CONTRACT_REFERENCE.md  DETECTION_RULES.md  LANGUAGE_SUPPORT.md  USAGE_GUIDE.md
scripts/: build-all.sh
src/: cli.rs  contract.rs  lib.rs  main.rs  report.rs  score.rs
src/analysis/: context.rs  facts.rs  mod.rs  stubs.rs  traits.rs
src/analysis/languages/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  scala.rs  swift.rs  typescript.rs
src/detect/: complexity.rs  dependencies.rs  files.rs  god_objects.rs  imports.rs  mocks.rs  mod.rs  patterns.rs  runner.rs  stubs.rs  suppress.rs  symbols.rs  todos.rs  types.rs
src/detect/manifest/: golang.rs  homeassistant.rs  mod.rs  none.rs  python.rs
src/detect/stdlib/: fallback.rs  mod.rs
src/parser/: mod.rs  treesitter.rs
src/parser/languages/: c.rs  cpp.rs  go.rs  hcl.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust_lang.rs  scala.rs  swift.rs  typescript.rs
src/registry/: cache.rs  crates.rs  go.rs  mod.rs  npm.rs  pypi.rs
src/templates/: cli-tool.yaml  client-sdk.yaml  crud-endpoint.yaml  minimal.yaml  worker.yaml
testdata/: Clean.java  Clean.kt  Clean.scala  Clean.swift  Mock.java  Mock.kt  Mock.scala  Mock.swift  Stub.java  Stub.kt  Stub.scala  Stub.swift  clean.c  clean.cpp  clean.go  clean.js  clean.py  clean.rs  clean.ts  generic-contract.yaml  mock.c  mock.cpp  mock.go  mock.js  mock.py  mock.rs  mock.ts  stub.c  stub.cpp  stub.go  stub.js  stub.py  stub.rs  stub.ts  test-contract.yaml
testdata/hallucinated_deps/: clean_imports.py  contract.yaml  contract_with_allowlist.yaml  fake_imports.go  fake_imports.js  fake_imports.py  fake_imports.rs
tests/: detection_integration.rs  output_format_test.rs  parser_integration.rs
