[package]
name = "hollowcheck"
version = "0.1.0"
edition = "2021"
description = "AI output quality gate system - detects hollow code implementations"
license = "Apache-2.0"
authors = ["Zen Systems"]
repository = "https://github.com/zen-systems/hollowcheck-rust"
homepage = "https://github.com/zen-systems/hollowcheck-rust"
readme = "README.md"
keywords = ["ai", "code-quality", "linter", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hollowcheck"
path = "src/main.rs"

[features]
default = ["tree-sitter"]
tree-sitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-java",
    "dep:tree-sitter-go",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-kotlin",
    "dep:tree-sitter-rust",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
directories = "5"
globset = "0.4"
lazy_static = "1.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2.4"

# Tree-sitter dependencies (optional, enabled by default)
tree-sitter = { version = "0.22", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-typescript = { version = "0.21", optional = true }
tree-sitter-java = { version = "0.21", optional = true }
tree-sitter-go = { version = "0.21", optional = true }
tree-sitter-c = { version = "0.21", optional = true }
tree-sitter-cpp = { version = "0.22", optional = true }
tree-sitter-javascript = { version = "0.21", optional = true }
tree-sitter-kotlin = { version = "0.3", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3.10"
